[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project]
name = "adex"
version = "0.0.1"
authors = [
  { name="Example Author", email="author@example.com" },
]
description = "A small example package"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/el-grudge/adversarial-example"
"Bug Tracker" = "https://github.com/el-grudge/adversarial-example/issues"

[tool.pdm.dependencies]
package_name = { path = "./src/adex/ResNet.py" }
package_name = { path = "./src/adex/block.py" }